kubernetes/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress
    annotations:
      networking.gke.io/managed-certificates: managed-cert
      kubernetes.io/ingress.global-static-ip-name: peerprep-ip
  spec:
    rules:
    - host: peerprep.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 80
        - path: /sockjs-node
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 80
        - path: /_next/webpack-hmr
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 80

    - host: api.peerprep.dev
      http:
        paths:
        - path: /user
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 80
        - path: /question
          pathType: Prefix
          backend:
            service:
              name: question-service
              port:
                number: 80
        - path: /matching
          pathType: Prefix
          backend:
            service:
              name: matching-service
              port:
                number: 80
        - path: /collaboration
          pathType: Prefix
          backend:
            service:
              name: collaboration-service
              port:
                number: 80
        - path: /document
          pathType: Prefix
          backend:
            service:
              name: document-service
              port:
                number: 80
        - path: /history
          pathType: Prefix
          backend:
            service:
              name: history-service
              port:
                number: 80
        - path: /videostreaming
          pathType: Prefix
          backend:
            service:
              name: video-service
              port:
                number: 80
